css/main.css
/* ... */
.drop {
  width: 30em;
  height: 3em;
  border: 2px dashed #3f51b5;
  border-radius: 25px;
  text-align: center;
  background-color: #fff;
  display: inline-block;
  margin: 5px;
  padding-top: 2em;
  cursor: pointer;
}

.drop .drop-text, .drop .caption {
  display: block;
  line-height: 1em;
  color: #3c1053;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
}

#queue {
  width: 62em;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
  margin: 0 auto;
}

#queue ul {
  padding: 0;
  list-style-type: none;
}

#queue li {
  min-height: 90px;
  display: block;
  text-decoration: none;
  color: #000;
  background-color: #FFF;
  padding-left: 10px;
  cursor: pointer;
  border-radius: 10px;
  padding: 5px 2px 5px 3px;
  margin: 0 0 8px 5px;
  opacity: 1;
}

#queue li img {
  margin-top: 7px;
  display: inline-block;
  vertical-align: middle;
  margin: 0 3px;
}

#queue li table {
  table-layout: fixed;
  white-space: nowrap;
  border-collapse: collapse;
  width: 37.5em;
  font-weight: 300;
  text-shadow: none;
  font-size: 12px;
  text-transform: none;
}

#queue li table td {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 1px;
} 

#queue li table td b {
  font-weight: 600;
}

.text-bloc {
  margin-left: 6px;
  display: inline-block;
  vertical-align: middle;
  width: 100px;
}

#queue li img:hover {
  margin-top: 7px;
  display: inline-block;
  vertical-align: middle;
  margin: 0 3px;
}

tbody:before {
  content: "";
  display: block;
}

.table_title {
  font-weight: 600;
  font-size: 14px;
  color: #3f51b5;
}

.li_old_download {
  filter: grayscale(100%) opacity(80%);
  opacity: 0;
  animation: fadeInUp 1s forwards;
}

.li_old_download_clicked,
.li_old_download:hover {
  filter: grayscale(0%) opacity(100%);
  transition: 0.3s;
}

.options {
  width: 100%;
  display: inline-block;
  height: 30px;
  padding: 5px 2px;
}

.options .btn, .modal .btn {
  font-weight: 600;
  background-color: #5E8FE5;
  border: none;
  color: #FFF;
  padding: 5px;
  text-align: center;
  transition-duration: 0.4s;
  margin: 6px 0;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  text-transform: none;
  border-radius: 10px;
  min-height: 26px;
}

.options .link, .modal .link, .options .terminate {
  background-color: #f44336;
  padding: 0 10px;
}

.options .link:hover, .modal .link:hover, .options .terminate:hover {
  transition: 0.3s;
  background-color: #f78f88;
}  

.options .rename, .modal .rename {
  background-color: #252F69;
  padding: 0 10px;
}

.options .rename:hover, .modal .rename:hover {
  transition: 0.3s;
  background-color: #5E8FE5;
}

.modal-rename {
  max-width: 60em;
} 

.options .delete, .modal .delete {
  background-color: rgb(92, 6, 21);
  padding: 0 10px;
}    

.options .delete:hover, .modal .delete:hover {
  transition: 0.3s;
  background-color: rgb(97, 46, 54);
} 

.modal-delete {
  max-width: 60em;
}

/* Specific styling for the close button */
.modal .close {
  background-color: #d9534f;
  padding: 10px;
}

.modal .close:hover {
  background-color: #c9302c;
}

.modal .btn-container {
  display: flex;
  justify-content: center;
}

.modal {
  max-width: 850px;
  margin: 0 auto;
  padding: 20px;
  background-color: #fff;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  max-height: 90vh;
  overflow-y: auto;
}

.profile-item {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 20px;
  width: 45%;
  margin: 1%;
  background-color: #f9f9f9;
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: 14px;
}

.profile-item label {
  flex: 0 0 70px;
  max-width: 70px;
  margin-right: 5px;
  line-height: 2;
  font-size: 11px;
}

.profile-name-input {
  max-width: 260px;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: 12px;
  padding-left: 10px;
  font-family: "Open Sans", "Segoe UI", Optima, Arial, sans-serif;
}

.profile-res-input {
  flex: 0 0 60px;
  max-width: 60px;
  margin-bottom: 10px;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: 12px;
  font-family: "Open Sans", "Segoe UI", Optima, Arial, sans-serif;
}

.profile-item select {
  max-width: 200px;
  margin-bottom: 10px;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: 12px;
  font-family: "Open Sans", "Segoe UI", Optima, Arial, sans-serif;
}

.resolution-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.resolution-container label {
  flex: 0 0 70px;
  max-width: 70px;
  margin-right: 10px;
  line-height: 2;
  font-size: 12px;
}

.short-input {
  flex: 0 0 60px;
  max-width: 60px;
  padding: 5px;
  border: 1px solid #ddd;
  border-radius: 5px;
  margin-right: 50px;
}


.button-container {
  text-align: center;
  margin-top: 20px;
  padding: 10px 0;
  border-top: 1px solid #ddd;
}

.button-container .btn {
  margin: 10px;
}

.btn-container {
  text-align: center;
  margin-top: 20px;
  padding: 10px 0;
  border-top: 1px solid #ddd;
}

.modal .btn.close {
  background-color: #d9534f;
}

.modal .btn.close:hover {
  background-color: #c9302c;
}


div.hide {
  position: absolute;
  width: 11px;
  visibility: hidden;
  cursor: pointer;
  height: 11px;
  top: 5px;
  right: 10px;
}

div.hide a {
  color: #FF0000;
}

ul li:hover .hide {
  visibility: visible;
}

.loader,
.loader:after {
  border-radius: 50%;
  width: 30px;
  height: 30px;
  display: inline-block;
  vertical-align: middle;
  border-top: 1.1em solid rgba(0, 0, 0, 0.6);
  border-right: 1.1em solid rgba(0, 0, 0, 0.6);
  border-bottom: 1.1em solid rgba(0, 0, 0, 0.6);
  border-left: 1.1em solid #333;
  transform: translateZ(0);
  animation: load8 1.1s infinite linear;
}

#delete-form, #rename-form, #profiles-form {
  min-width: 850px;
}
/* ... */

